styles.css
body {
    /* background-color: rgba(191, 248, 255, 0.35); */
    color: black;
    background-color: #e1ecf7;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='338' height='40.6' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='2' stroke-opacity='0.06'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
    /* background by SVGBackgrounds.com */
}
.section-title {
    text-align: center;
    margin: 1.5rem auto; /* centers div and gives top and bottom margin */
}
#white-space-div {
    height: 4rem;
}
.section-title + p {
    background-color:white;
    border:1px solid rgba(70, 70, 70, 0.9);
    padding: .75rem 1.25rem;
}
.btn, ul > .list-group-item {
    border:1px solid rgba(70, 70, 70, 0.9);
}

/*===========
    Navbar
=============*/

    /* match default bootstrap link color */
.custom-toggler {
    border-color: #007bff;
}
.custom-toggler:hover {
    border-color: rgba(0,86,179, 1);
}

    /* match default bootstrap link color on hover*/
.custom-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,123,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}
.custom-toggler:hover .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,86,179, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}


/*===========
    Cards
=============*/


User
.card {
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
}
.card-img-top {
    width: 500px;
    height: 500px;
    object-fit: cover;
    
}
.gif-portion {
    width: 500px;
	height: 500px;
    object-fit: cover;
    display: none;
}
@media (min-width: 768px) {
    .gif-portion {
        display: block;  /* Прикажи гиф на големи екрани */
    }

    .img-portion {
        display: none;   /* Сокриј слика на големи екрани */
    }
}

@media screen and (max-width: 575px) {
.gif-portion {
    display: none;
    }
.img-portion {
    display: block;
    }
}



/*===========
    Lists
=============*/

:first-child.list-group-item {
    border-top: none;
    border-left: none;
    border-right: none;
    background: none;
    font-weight: bold;
}

